# STM32N6-dev-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  findings.md  marketplace.json  plugin.json  progress.md  task_plan.md
.claude/commands/: analyze.md  build.md  clock.md  debug.md  flash.md  model.md  peripheral.md  test.md
.claude/skills/: bsp-configure.md  clock-wizard.md  debug-session.md  driver-create.md  filesystem-setup.md  model-deploy.md  project-init.md  rtos-setup.md
.devflow/: context-checkpoint.md
docs/: api-reference.md  architecture.md  requirements.md  stm32n6-reference.md
sample-project/: CMakeLists.txt  README.md
sample-project/include/: stm32n6xx_it.h
sample-project/linker/: STM32N6570_FLASH.ld
sample-project/src/: main.c  stm32n6xx_it.c  system_stm32n6xx.c
stm32n6-dev-server/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
stm32n6-dev-server/coverage/: coverage-final.json  index.html  lcov.info
stm32n6-dev-server/coverage/agents/: ai-engineer.ts.html  base.ts.html  driver-developer.ts.html  index.html  index.ts.html  manager.ts.html  stm32-architect.ts.html
stm32n6-dev-server/coverage/config/: index.html  manager.ts.html
stm32n6-dev-server/coverage/hooks/: engine.ts.html  index.html  index.ts.html
stm32n6-dev-server/coverage/lcov-report/: index.html
stm32n6-dev-server/src/: index.ts
stm32n6-dev-server/tests/: agents.test.ts  config.test.ts  coverage-boost-2.test.ts  coverage-boost-3.test.ts  coverage-boost-4.test.ts  coverage-boost.test.ts  hooks.test.ts  logger.test.ts  tools-impl.test.ts  tools.test.ts
(+78 files in other folders)
